-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.3.0
-
None
-
dbc7ed82149d8915a32489a0d3a930d2793c6e65
When passing a relative path as the output for qmake then it will place the output in the path relative to the pro file rather than the current directory. To reproduce this go to qtbase/examples/widgets/mainwindows and do:
qmake -o application/Makefile application/application.pro
The Makefile(s) should be in the application directory as per the output but they end up being in application/application instead.
| For Gerrit Dashboard: QTBUG-39460 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 86863,1 | Ensure that there is no duplication of the output directory in output | stable | qt/qtbase | Status: MERGED | +2 | 0 |