Ensure that there is no duplication of the output directory in output

When a relative path was specified as the output then it would be in both
Option::output_dir and Option::output. Therefore in that case
Option::output should be just the filename as Option::output_dir has the
correct path to output to.

Task-number: QTBUG-39460
Change-Id: Idc988e6bad94f34b89660fb5e8d6fa3a39dc623b
Reviewed-by: Oswald Buddenhagen <oswald.buddenhagen@digia.com>

cregit: dbc7ed82149d8915a32489a0d3a930d2793c6e65 https://github.com/qt/qtbase/commit/dbc7ed82149d8915a32489a0d3a930d2793c6e65